Changed background color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=green>
+<body bgcolor=<blue>
 <center>
 <h2><font color=white>Hello</font></h2>
 <font color=blue>something</font>
