--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor=<blue>
 <center>
-<h2><font color=white>Hello</font></h2>
+<h2><font color=red>Hello</font></h2>
 <font color=blue>something</font>
 </center>
   <p>New paragraph</p>
